[gd_scene load_steps=3 format=3 uid="uid://duqn6e10wc3q2"]

[ext_resource type="Script" path="res://main.gd" id="1_kjdiu"]
[ext_resource type="Script" path="res://Encode.gd" id="1_u7n5e"]

[node name="Main" type="Node2D"]
script = ExtResource("1_kjdiu")

[node name="EncodeTab" type="Button" parent="."]
offset_left = 100.0
offset_top = 16.0
offset_right = 300.0
offset_bottom = 116.0
text = "Encode"
metadata/_edit_use_anchors_ = true

[node name="DecodeTab" type="Button" parent="."]
offset_left = 310.0
offset_top = 16.0
offset_right = 510.0
offset_bottom = 116.0
text = "Decode"
metadata/_edit_use_anchors_ = true

[node name="GenerateTab" type="Button" parent="."]
offset_left = 520.0
offset_top = 16.0
offset_right = 720.0
offset_bottom = 116.0
text = "Generate"

[node name="SettingsTab" type="Button" parent="."]
offset_left = 730.0
offset_top = 16.0
offset_right = 930.0
offset_bottom = 116.0
text = "Settings
"

[node name="AboutTab" type="Button" parent="."]
offset_left = 940.0
offset_top = 16.0
offset_right = 1140.0
offset_bottom = 116.0
text = "About"

[node name="EncodeStuffs" type="Node2D" parent="."]
script = ExtResource("1_u7n5e")

[node name="Text" type="LineEdit" parent="EncodeStuffs"]
offset_left = 100.0
offset_top = 130.0
offset_right = 700.0
offset_bottom = 230.0
placeholder_text = "Text to encode"
metadata/_edit_use_anchors_ = true

[node name="Key" type="LineEdit" parent="EncodeStuffs"]
offset_left = 100.0
offset_top = 240.0
offset_right = 700.0
offset_bottom = 340.0
placeholder_text = "Key"
metadata/_edit_use_anchors_ = true

[node name="Encoded" type="LineEdit" parent="EncodeStuffs"]
offset_left = 100.0
offset_top = 350.0
offset_right = 700.0
offset_bottom = 450.0
placeholder_text = "Encoded"
editable = false
metadata/_edit_use_anchors_ = true

[node name="eMessage" type="LineEdit" parent="EncodeStuffs"]
offset_left = 100.0
offset_top = 480.0
offset_right = 700.0
offset_bottom = 580.0
editable = false

[node name="DecodeStuffs" type="Node2D" parent="."]

[node name="Text2Decode" type="LineEdit" parent="DecodeStuffs"]
offset_left = 100.0
offset_top = 130.0
offset_right = 700.0
offset_bottom = 230.0
placeholder_text = "Text to decode"

[node name="dKey" type="LineEdit" parent="DecodeStuffs"]
offset_left = 100.0
offset_top = 240.0
offset_right = 700.0
offset_bottom = 340.0
placeholder_text = "Key"

[node name="Decoded" type="LineEdit" parent="DecodeStuffs"]
offset_left = 100.0
offset_top = 350.0
offset_right = 700.0
offset_bottom = 450.0
placeholder_text = "Decoded"

[node name="dMessage" type="LineEdit" parent="DecodeStuffs"]
offset_left = 100.0
offset_top = 480.0
offset_right = 700.0
offset_bottom = 580.0
editable = false

[node name="GenerateStuffs" type="Node2D" parent="."]

[node name="Seed" type="LineEdit" parent="GenerateStuffs"]
offset_left = 100.0
offset_top = 130.0
offset_right = 700.0
offset_bottom = 230.0
placeholder_text = "Seed"

[node name="Generated" type="TextEdit" parent="GenerateStuffs"]
offset_left = 100.0
offset_top = 240.0
offset_right = 700.0
offset_bottom = 840.0

[node name="SettingsStuffs" type="Node2D" parent="."]

[node name="Alphabet" type="LineEdit" parent="SettingsStuffs"]
offset_left = 100.0
offset_top = 130.0
offset_right = 700.0
offset_bottom = 230.0
text = "Alphabet: ABCDEFGHIJKLMNOPQRSTUVWXYZ"
editable = false

[node name="AboutStuffs" type="Node2D" parent="."]

[node name="AboutText" type="TextEdit" parent="AboutStuffs"]
offset_left = 100.0
offset_top = 130.0
offset_right = 700.0
offset_bottom = 480.0
text = "This code is similar to a 'one time pad' (aka Vernam Cipher) 
which can be used to encode/decode messages.

Tips:
- The key must be at least the same length as the uncoded text.
- The key must be truly random.
- The key must never be reused, in whole or in part.
- The key must be kept completely secret by the communicating parties.
- Consider adding (or using) a character (or phrase) 
that indicates that the message was sent under duress.
"
editable = false

[connection signal="pressed" from="EncodeTab" to="." method="_on_encode_tab_pressed"]
[connection signal="pressed" from="DecodeTab" to="." method="_on_decode_tab_pressed"]
[connection signal="pressed" from="GenerateTab" to="." method="_on_generate_tab_pressed"]
[connection signal="pressed" from="SettingsTab" to="." method="_on_settings_tab_pressed"]
[connection signal="pressed" from="AboutTab" to="." method="_on_about_tab_pressed"]
[connection signal="text_changed" from="EncodeStuffs/Text" to="EncodeStuffs" method="_on_text_text_changed"]
[connection signal="text_changed" from="EncodeStuffs/Key" to="EncodeStuffs" method="_on_key_text_changed"]
